; ModuleID = '/home/carl/AnghaBench/freebsd/sys/riscv/riscv/extr_nexus.c_nexus_activate_resource.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/riscv/riscv/extr_nexus.c_nexus_activate_resource.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.resource = type { i32 }

@SYS_RES_MEMORY = common dso_local global i32 0, align 4
@SYS_RES_IOPORT = common dso_local global i32 0, align 4
@memmap_bus = common dso_local global i32 0, align 4
@SYS_RES_IRQ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32, i32, %struct.resource*)* @nexus_activate_resource to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nexus_activate_resource(i32 %0, i32 %1, i32 %2, i32 %3, %struct.resource* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.resource*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i64, align 8
  %14 = alloca i64, align 8
  %15 = alloca i64, align 8
  store i32 %0, i32* %7, align 4
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store %struct.resource* %4, %struct.resource** %11, align 8
  %16 = load %struct.resource*, %struct.resource** %11, align 8
  %17 = call i32 @rman_activate_resource(%struct.resource* %16)
  store i32 %17, i32* %12, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %5
  %20 = load i32, i32* %12, align 4
  store i32 %20, i32* %6, align 4
  br label %70

21:                                               ; preds = %5
  %22 = load i32, i32* %9, align 4
  %23 = load i32, i32* @SYS_RES_MEMORY, align 4
  %24 = icmp eq i32 %22, %23
  br i1 %24, label %29, label %25

25:                                               ; preds = %21
  %26 = load i32, i32* %9, align 4
  %27 = load i32, i32* @SYS_RES_IOPORT, align 4
  %28 = icmp eq i32 %26, %27
  br i1 %28, label %29, label %53

29:                                               ; preds = %25, %21
  %30 = load %struct.resource*, %struct.resource** %11, align 8
  %31 = call i64 @rman_get_start(%struct.resource* %30)
  store i64 %31, i64* %13, align 8
  %32 = load %struct.resource*, %struct.resource** %11, align 8
  %33 = call i64 @rman_get_size(%struct.resource* %32)
  store i64 %33, i64* %14, align 8
  %34 = load i64, i64* %13, align 8
  %35 = load i64, i64* %14, align 8
  %36 = call i32 @bus_space_map(i32* @memmap_bus, i64 %34, i64 %35, i32 0, i64* %15)
  store i32 %36, i32* %12, align 4
  %37 = load i32, i32* %12, align 4
  %38 = icmp ne i32 %37, 0
  br i1 %38, label %39, label %43

39:                                               ; preds = %29
  %40 = load %struct.resource*, %struct.resource** %11, align 8
  %41 = call i32 @rman_deactivate_resource(%struct.resource* %40)
  %42 = load i32, i32* %12, align 4
  store i32 %42, i32* %6, align 4
  br label %70

43:                                               ; preds = %29
  %44 = load %struct.resource*, %struct.resource** %11, align 8
  %45 = call i32 @rman_set_bustag(%struct.resource* %44, i32* @memmap_bus)
  %46 = load %struct.resource*, %struct.resource** %11, align 8
  %47 = load i64, i64* %15, align 8
  %48 = inttoptr i64 %47 to i8*
  %49 = call i32 @rman_set_virtual(%struct.resource* %46, i8* %48)
  %50 = load %struct.resource*, %struct.resource** %11, align 8
  %51 = load i64, i64* %15, align 8
  %52 = call i32 @rman_set_bushandle(%struct.resource* %50, i64 %51)
  br label %69

53:                                               ; preds = %25
  %54 = load i32, i32* %9, align 4
  %55 = load i32, i32* @SYS_RES_IRQ, align 4
  %56 = icmp eq i32 %54, %55
  br i1 %56, label %57, label %68

57:                                               ; preds = %53
  %58 = load i32, i32* %8, align 4
  %59 = load %struct.resource*, %struct.resource** %11, align 8
  %60 = call i32 @intr_activate_irq(i32 %58, %struct.resource* %59)
  store i32 %60, i32* %12, align 4
  %61 = load i32, i32* %12, align 4
  %62 = icmp ne i32 %61, 0
  br i1 %62, label %63, label %67

63:                                               ; preds = %57
  %64 = load %struct.resource*, %struct.resource** %11, align 8
  %65 = call i32 @rman_deactivate_resource(%struct.resource* %64)
  %66 = load i32, i32* %12, align 4
  store i32 %66, i32* %6, align 4
  br label %70

67:                                               ; preds = %57
  br label %68

68:                                               ; preds = %67, %53
  br label %69

69:                                               ; preds = %68, %43
  store i32 0, i32* %6, align 4
  br label %70

70:                                               ; preds = %69, %63, %39, %19
  %71 = load i32, i32* %6, align 4
  ret i32 %71
}

declare dso_local i32 @rman_activate_resource(%struct.resource*) #1

declare dso_local i64 @rman_get_start(%struct.resource*) #1

declare dso_local i64 @rman_get_size(%struct.resource*) #1

declare dso_local i32 @bus_space_map(i32*, i64, i64, i32, i64*) #1

declare dso_local i32 @rman_deactivate_resource(%struct.resource*) #1

declare dso_local i32 @rman_set_bustag(%struct.resource*, i32*) #1

declare dso_local i32 @rman_set_virtual(%struct.resource*, i8*) #1

declare dso_local i32 @rman_set_bushandle(%struct.resource*, i64) #1

declare dso_local i32 @intr_activate_irq(i32, %struct.resource*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
